Settings: allow disabling screenshot shutter sound [2/2]
Change-Id: Ie69f44a3b7db3bf3c9a5c098bca43568e1099283
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -57,4 +57,7 @@
     <string name="pattern_custom">Custom</string>
     <string name="custom_vibration_pattern_title">Custom pattern</string>
 
+    <!-- Screenshot shutter -->
+    <string name="screenshot_shutter_sound_title">Screenshot shutter sound</string>
+
 </resources>
