Settings: Add OpenDelta
Adding to both "System" (top category), and "About phone"
(subcategory of "System"), similar to that of the GMS System Update.

AOSiP Edits:
 - Removed from "About Phone"
 - Fixed for 10

Change-Id: Icca0f96720d0851738490ad543b54ec82cb19fa2
Signed-off-by: Brett Montague <bmontagu@gmail.com>
Signed-off-by: Akhil Narang <akhilnarang.1999@gmail.com>
Signed-off-by: xlxfoxxlx <joshfox87@gmail.com>
Signed-off-by: argraur <argraur@gmail.com>
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -57,4 +57,10 @@
     <!-- Density options -->
     <string name="density_category">Density options</string>
 
+    <!-- OTA App -->
+    <string name="update_settings_title">YAAP Updater</string>
+    <string name="update_settings_summary">Check for the latest version of the rom</string>
+    <string name="update_package" translatable="false">eu.chainfire.opendelta</string>
+    <string name="update_activity" translatable="false">eu.chainfire.opendelta.MainActivity</string>
+
 </resources>
