AmbientDisplay: Add custom pref for devices with custom doze packages
[poad42]: Match string we use with our doze package
Change-Id: Ie065f3892360f56d930ad1a373547454fb80892b

--- a/res/values/yaap_config.xml
+++ b/res/values/yaap_config.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2020 YAAP
-
+<!-- Copyright (C) 2007 The Android Open Source Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,17 +11,8 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Top level YASP -->
-    <string name="yaap_settings_title">YASP</string>
-    <string name="yaap_settings_summary">Yet Another Settings Page</string>
 
-    <!-- Doze on charge -->
-    <string name="doze_on_charge_title">Always on when charging</string>
-    <string name="doze_on_charge_summary">Show doze screen all the time when charging</string>
+    <!-- Device specific doze package -->
+    <string name="config_customDozePackage" translatable="false"></string>
 
-    <!-- Device Parts -->
-    <string name="device_part_title">Device features</string>
-    <string name="device_part_summary">Device specific features</string>
-
-    <string name="ambient_display_custom_title">Custom options</string>
 </resources>
