Bluetooth: Create new catogory for earbuds
Create new catagory for TWS devices such that
only paired TWS devices will be populated under
this catagory.

CRs-fixed: 2230362
Change-Id: I6f7084c4bb319820e9d534c06adb01904b082ff9

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -97,4 +97,6 @@
     <string name="qstile_requires_unlocking_title">Secure QS tiles require unlocking</string>
     <string name="qstile_requires_unlocking_summary">The following QS tiles require unlocking before you can acccess them from lock screen:\nAirplane, Cellular, NFC, Hotspot, USB tethering and Location</string>
 
+    <!-- Title for connected TWS device group [CHAR LIMIT=none]-->
+    <string name="connected_tws_device_saved_title">Saved Earbuds</string>
 </resources>
