--- a/res/values/yaap_config.xml
+++ b/res/values/yaap_config.xml
@@ -15,4 +15,6 @@
     <!-- Device specific doze package -->
     <string name="config_customDozePackage" translatable="false"></string>
 
+    <bool name="config_show_color_mode">true</bool>
+
 </resources>
