Add device parts to system settings
icon from https://materialdesignicons.com/icon/cellphone-settings-variant

Change-Id: I4d065018ab3ea187ca580b2535d34cb692a7c3b8
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -21,4 +21,8 @@
     <!-- Doze on charge -->
     <string name="doze_on_charge_title">Always on when charging</string>
     <string name="doze_on_charge_summary">Show doze screen all the time when charging</string>
+
+    <!-- Device Parts -->
+    <string name="device_part_title">Device features</string>
+    <string name="device_part_summary">Device specific features</string>
 </resources>
