Battery: show battery temp on power summary
Signed-off-by: mdeejay <mdjrussia@gmail.com>
Signed-off-by: DennySPB <dennyspb@gmail.com>
Change-Id: Iff2ed19f59f9b9edcc466840a1ba0d385e29ff07

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -38,4 +38,6 @@
     <string name="theme_customization_icon_shape_title">Icon shape</string>
     <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the setting which enables overlays to customize the system wide icon pack. -->
     <string name="theme_customization_icon_pack_title">Icon pack</string>
+
+    <string name="battery_temp">Battery temperature</string>
 </resources>
