Add back SELinux info
Change-Id: I9e0d09416157a0eb542f8934bfef269c41eff363

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -40,4 +40,10 @@
     <string name="theme_customization_icon_pack_title">Icon pack</string>
 
     <string name="battery_temp">Battery temperature</string>
+
+    <!-- SELinux Status -->
+    <string name="selinux_status">SELinux status</string>
+    <string name="selinux_status_disabled">Disabled</string>
+    <string name="selinux_status_permissive">Permissive</string>
+    <string name="selinux_status_enforcing">Enforcing</string>
 </resources>
