--- a/res/values/yaap_config.xml
+++ b/res/values/yaap_config.xml
@@ -17,4 +17,7 @@
 
     <bool name="config_show_color_mode">true</bool>
 
+    <!-- Whether to show or hide sensitive info (like IMEI and Phone Number) on About phone -->
+    <bool name="configShowDeviceSensitiveInfo">false</bool>
+
 </resources>
