Rearrange density options under Settings/Display
Change-Id: I7a4c7eca086945b2b5367ffb952deb6c635a1f0a

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -58,4 +58,7 @@
     <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
     <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader</string>
 
+    <!-- Density options -->
+    <string name="density_category">Density options</string>
+
 </resources>
