--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -38,5 +38,7 @@
     <color name="palette_list_color_blue">@color/palette_list_dark_mode_color_blue</color>
     <color name="palette_list_color_purple">@color/palette_list_dark_mode_color_purple</color>
     <color name="gestures_setting_background_color">@android:color/black</color>
+    <!-- YASP Night Mode Color. -->
+    <color name="ic_yaap_settings_background">@android:color/black</color>
 </resources>
 
