Settings: Add an option to show advanced reboot on keyguard [2/2]
And DO NOT show it by default

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -57,6 +57,10 @@
     <!-- Density options -->
     <string name="density_category">Density options</string>
 
+    <!-- Advanced Reboot -->
+    <string name="power_menu_advanced_reboot_title">Advanced reboot when locked</string>
+    <string name="power_menu_advanced_reboot_summary">Show advanced reboot on lock screen</string>
+
     <!-- OTA App -->
     <string name="update_settings_title">YAAP Updater</string>
     <string name="update_settings_summary">Check for the latest version of the rom</string>
