Settings: Update Chinese translation (#6)
Signed-off-by: ALKALiKong <alikongalk@gmail.com>

--- a/res/values-zh-rCN/yaap_strings.xml
+++ b/res/values-zh-rCN/yaap_strings.xml
@@ -73,10 +73,8 @@
     <string name="update_settings_title">YAAP 更新</string>
     <string name="update_settings_summary">检查ROM的最新版本</string>
 
-
-
     <!-- Radio Info -->
-    <string name="radio_info_title">电台信息</string>
+    <string name="radio_info_title">手机信号参数</string>
 
     <!-- Cycle through ringer modes gesture -->
     <string name="prevent_ringing_option_cycle">循环模式</string>
